@@ -39,22 +39,21 @@ t/08memory_leak.t
 t/10test_script.t
 t/20user.t
 t/boilerplate.pm
-var/locale/de/LC_MESSAGES/app_doh.po
-var/locale/en/LC_MESSAGES/app_doh.po
+var/etc/users.json
+var/locale/de/LC_MESSAGES/app-doh.po
+var/locale/en/LC_MESSAGES/app-doh.po
 var/root/css/default-blue.css
 var/root/css/default-editor.css
 var/root/css/default-green.css
 var/root/css/default-navy.css
 var/root/css/default-red.css
 var/root/css/jekyll-green.css
-var/root/docs/app-doh.json
 var/root/docs/en/00_Getting_Started.md
 var/root/docs/en/01_Examples/01_GitHub_Flavored_Markdown.md
 var/root/docs/en/01_Examples/05_Code_Highlighting.md
 var/root/docs/en/05_More_Examples/01_Hello_World.md
 var/root/docs/en/20_Air_Gapped_Computer.md
 var/root/docs/en/index.md
-var/root/docs/users.json
 var/root/img/app-editor.png
 var/root/img/app-thumbs.png
 var/root/img/app.png
