@@ -1,5 +1,5 @@
 requires "App::Ack" => "2.12";
-requires "Class::Usul" => "v0.65.0";
+requires "Class::Usul" => "v0.67.0";
 requires "Cpanel::JSON::XS" => "3.0115";
 requires "Crypt::Eksblowfish" => "0.009";
 requires "Daemon::Control" => "0.001006";
@@ -22,10 +22,10 @@ requires "Starman" => "0.3000";
 requires "Text::MultiMarkdown" => "1.000034";
 requires "Try::Tiny" => "0.22";
 requires "Type::Tiny" => "1.000004";
-requires "Unexpected" => "v0.39.0";
-requires "Web::Components" => "v0.4.0";
-requires "Web::Components::Role::TT" => "v0.2.0";
-requires "Web::ComposableRequest" => "v0.3.0";
+requires "Unexpected" => "v0.43.0";
+requires "Web::Components" => "v0.5.0";
+requires "Web::Components::Role::TT" => "v0.4.0";
+requires "Web::ComposableRequest" => "v0.4.0";
 requires "Web::Simple" => "0.030";
 requires "YAML::Tiny" => "1.67";
 requires "local::lib" => "2.000014";
