@@ -8,7 +8,7 @@ namespace::clean       = 0.25
 strictures             = 2.000000
 warnings::illegalproto = 0.001002
 App::Ack               = 2.12
-Class::Usul            = v0.65.0
+Class::Usul            = v0.67.0
 Cpanel::JSON::XS       = 3.0115
 Crypt::Eksblowfish     = 0.009
 Daemon::Control        = 0.001006
@@ -32,10 +32,10 @@ Text::MultiMarkdown    = 1.000034
 Try::Tiny              = 0.22
 Type::Tiny             = 1.000004
 Web::Simple            = 0.030
-Unexpected             = v0.39.0
-Web::Components        = v0.4.0
-Web::Components::Role::TT = v0.2.0
-Web::ComposableRequest = v0.3.0
+Unexpected             = v0.43.0
+Web::Components        = v0.5.0
+Web::Components::Role::TT = v0.4.0
+Web::ComposableRequest = v0.4.0
 YAML::Tiny             = 1.67
 
 [Prereqs / ConfigureRequires]
