@@ -1,15 +1,0 @@
-{
-   "analytics": "UA-XXXXXXXX-XX",
-   "float": true,
-   "font": "http://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100",
-   "links": {
-      "Built Using Perl": "http://www.perl.org",
-      "Download": "https://github.com/pjfl/p5-app-doh/archive/master.zip",
-      "Github Repo": "https://github.com/pjfl/p5-app-doh.git",
-      "Issues/Wishlist": "http://github.com/pjfl/p5-app-doh/issues",
-      "Markdown Syntax": "http://daringfireball.net/projects/markdown/syntax"
-   },
-   "locales": [ "en", "de" ],
-   "title": "Doh!",
-   "twitter": [ "perl" ]
-}
